--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-native": "^0.74.3",
+    "react-native-svg": "^15.4.0",
     "react-scripts": "5.0.1",
     "react-simple-chatbot": "^0.6.1",
     "recharts": "^2.5.0",
+    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
